
==== version history of distribution Log::Report

Unless noted otherwise, these changes where initiated and applied by
Mark Overmeer.

TODO:
	. connect to Message::Passing framework

version 1.33:

version 1.32: Tue 26 Jan 09:13:31 CET 2021

	Fixes:
	- ::Dancer2, use correct VERSION, github issue#3
	- ::Dancer2, fix stacktrace sent to browser with show_errors disabled
	  by [Andy Beverley], github issue#7
	  
version 1.31: Fri 15 Jan 16:35:39 CET 2021

	Fixes:
	- another attempt on issue #6, exceptions with specific destination
	  are not caught by ::Try
	- previous release broke ::Try::hide() [Andy Beverley]

version 1.30: Fri 15 Jan 12:46:14 CET 2021

	Fixes:
	- recursive errors when file cannot be written for ::File dispatcher
	  github issue#4 [Tom Hukins]
	- exceptions with specific destination are not caught by ::Try
	  github issue#6 [Andy Beverley]
	- redirected exception messages forget their explicit dispatcher
	  destination.  Github issue#6

	Improvements:
	- use ::Util::expand_reasons() for ::Try::hide()
	- require Log::Report::Options 1.07 for more expand_reasons options

version 1.29: Fri  8 Nov 09:18:01 CET 2019

	Fixes:
	- error code changed from libxml2 2.9.9 to 2.9.10
	  rt.cpan.org#130934 [Petr Pisar]

	Improvements:
	- skip tests with error messages for Haiku, because they are quite
	  different. [cpantesters]

version 1.28: Tue 14 May 09:27:50 CEST 2019

	Fixes:
	- Dancer2 version 0.166001 is too old as well. [cpantesters]
	- call to wasFatal($class)/reportFatal($class) without exception
	  autovivified an 'undef' in the exception list. [Andrew Beverley]
	- fatal exception not always the last in try() block.

version 1.27: Fri  1 Jun 10:00:10 CEST 2018

	Fixes:
	- fix metadata [Mohammad S Anwar]

	Improvements:
	- Dancer2 add custom fatal handlers [Andrew Beverley]

version 1.26: Tue Jan 23 23:45:55 CET 2018

	Improvements:
	- convert to GIT
	- publish via GitHUB

version 1.25: Fri  8 Dec 09:18:23 CET 2017

	Fixes: