@@ -22,18 +22,18 @@ my $errno  = $!+0;
 my $errstr = "$!";
 
 sub process($)
-{
-    my ($err, $opt, $reason, $message) = die_decode shift;
-    $err =~ s/\d+\.?$/XX/;
+{   my $err   = shift;
+    my ($opt, $reason, $message) = die_decode $err;
+#   $err =~ s/\d+\.?$/XX/;
     my $errno = $opt->{errno}    || 'no errno';
     my $loc   = $opt->{location};
     my $loca  = $loc ? "$loc->[1]#XX" : 'no location';
     my $stack = join "\n",
                     map { join '#', $_->[0], $_->[1], 'XX' }
                         @{$opt->{stack}};
+
     my $r     = <<__RESULT;
 $reason: $message ($errno)
-$err
 $loca
 $stack
 __RESULT
@@ -56,7 +56,6 @@ eval { die "ouch" };
 my $die_text1 = $@;
 is(process($die_text1),  <<__OUT, "die");
 ERROR: ouch (no errno)
-ouch at t/DieTests.pm line XX
 t/DieTests.pm#XX
 
 __OUT
@@ -65,7 +64,6 @@ eval { die "ouch\n" };
 my $die_text2 = $@;
 is(process($die_text2),  <<__OUT, "die");
 ERROR: ouch (no errno)
-ouch
 no location
 
 __OUT
@@ -74,7 +72,6 @@ eval { $! = $errno; die "ouch $!" };
 my $die_text3 = $@;
 is(process($die_text3),  <<__OUT, "die");
 FAULT: ouch (3)
-ouch No such process at t/DieTests.pm line XX
 t/DieTests.pm#XX
 
 __OUT
@@ -83,7 +80,6 @@ eval { $! = $errno; die "ouch $!\n" };
 my $die_text4 = $@;
 is(process($die_text4),  <<__OUT, "die");
 FAULT: ouch (3)
-ouch No such process
 no location
 
 __OUT
@@ -94,7 +90,6 @@ eval { croak "ouch" };
 my $croak_text1 = $@;
 is(process($croak_text1),  <<__OUT, "croak");
 ERROR: ouch (no errno)
-ouch at t/41die.t line XX
 t/41die.t#XX
 
 __OUT
@@ -103,7 +98,6 @@ eval { croak "ouch\n" };
 my $croak_text2 = $@;
 is(process($croak_text2),  <<__OUT, "croak");
 ERROR: ouch (no errno)
-ouch
 t/41die.t#XX
 
 __OUT
@@ -112,7 +106,6 @@ eval { $! = $errno; croak "ouch $!" };
 my $croak_text3 = $@;
 is(process($croak_text3),  <<__OUT, "croak");
 FAULT: ouch (3)
-ouch No such process at t/41die.t line XX
 t/41die.t#XX
 
 __OUT
@@ -121,7 +114,6 @@ eval { $! = $errno; croak "ouch $!\n" };
 my $croak_text4 = $@;
 is(process($croak_text4),  <<__OUT, "croak");
 FAULT: ouch (3)
-ouch No such process
 t/41die.t#XX
 
 __OUT
@@ -132,7 +124,6 @@ eval { confess "ouch" };
 my $confess_text1 = $@;
 is(process($confess_text1),  <<__OUT, "confess");
 PANIC: ouch (no errno)
-ouch at t/DieTests.pm line XX
 t/DieTests.pm#XX
 eval {...}#t/DieTests.pm#XX
 DieTests::run_tests()#t/41die.t#XX
@@ -143,7 +134,6 @@ eval { confess "ouch\n" };
 my $confess_text2 = $@;
 is(process($confess_text2),  <<__OUT, "confess");
 PANIC: ouch (no errno)
-ouch
 t/DieTests.pm#XX
 eval {...}#t/DieTests.pm#XX
 DieTests::run_tests()#t/41die.t#XX
@@ -154,7 +144,6 @@ eval { $! = $errno; confess "ouch $!" };
 my $confess_text3 = $@;
 is(process($confess_text3),  <<__OUT, "confess");
 FAULT: ouch (3)
-ouch No such process at t/DieTests.pm line XX
 t/DieTests.pm#XX
 eval {...}#t/DieTests.pm#XX
 DieTests::run_tests()#t/41die.t#XX
@@ -173,7 +162,6 @@ eval { $! = $errno; confess "ouch $!\n" };
 my $confess_text4 = $@;
 is(process($confess_text4),  <<__OUT, "confess");
 FAULT: ouch (3)
-ouch No such process
 t/DieTests.pm#XX
 eval {...}#t/DieTests.pm#XX
 DieTests::run_tests()#t/41die.t#XX
